--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
@@ -25,7 +28,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.3",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
   }
 }
