--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/passport": "^1.0.16",
@@ -25,11 +28,15 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^12.6.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.5.3",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
   }
