--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.5.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "socket.io": "^4.7.5"
   }
 }
