--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.5"
   }
 }
