--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/express-socket.io-session": "^1.3.9",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "jest": "^29.7.0",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-socket.io-session": "^1.3.5",
     "mongoose": "^8.5.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
