--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true
     },
-    "include": ["src/**/*"]
+    "include": [
+      "src/**/*.ts",
+      "src/types/**/*.d.ts"
+    ]
   }
