--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express-session": "^1.18.0",
     "@types/express-socket.io-session": "^1.3.9",
     "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
@@ -36,11 +37,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "express-socket.io-session": "^1.3.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport.socketio": "^3.7.0",
+    "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
     "socket.io": "^4.7.5"
   }
