--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "test": "jest --forceExit --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +20,15 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/express-socket.io-session": "^1.3.9",
+    "@types/jest": "^29.5.12",
+    "@types/mongodb-memory-server": "^1.8.0",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
