--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,6 @@ dist
 .history
 .ionide
 
+docker-compose.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,dotenv
